--- a/main.html
+++ b/main.html
@@ -8,9 +8,20 @@
 </head>
 
 <body>
-    <h1>JavaScript Task Example</h1>
+    <h1>JavaScript Task1</h1>
+
+    <ul id="user-list">
+        <li class="user-name">Tetyana</li>
+        <li class="user-name">Telentik</li>
+        <li class="user-name">Lyosha</li>
+        <li class="user-name">Dmytrusyk</li>
+        <li class="user-name">Hlib</li>
+    </ul>
     <script src="task1.js"></script>
+    <h1>JavaScript Task2</h1>
     <script src="task2.js"></script>
+    <h1>JavaScript Task3</h1>
+    <script src="task4.js"></script>
 
 </body>
 
