main.html was changed.

--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>JavaScript Task1</h1>
+    <h1>JavaScript Tasks</h1>
 
     <ul id="user-list">
         <li class="user-name">Tetyana</li>
@@ -18,9 +18,7 @@
         <li class="user-name">Hlib</li>
     </ul>
     <script src="task1.js"></script>
-    <h1>JavaScript Task2</h1>
     <script src="task2.js"></script>
-    <h1>JavaScript Task3</h1>
     <script src="task4.js"></script>
 
 </body>
